Added controller, services, helper, conection with openweathermap api
